[tool.poetry]
name = "project#2_Andreeva_M25-555"
version = "0.1.0"
description = "Консольное приложение для работы с базой данных с поддержкой CRUD-операций"
authors = ["Andreeva <andreeva@example.com>"]

packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
prompt = "*"
prettytable = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"

[tool.poetry.scripts]
database = "src.primitive_db.main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

